update phase 1-2